[package]
name = "rust-bert-api"
version = "0.1.0"
authors = ["Thomas Buckley-Houston <tom@tombh.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.9.0"
actix-web = "3.0.1"
env_logger = "0.7.1"
qstring = "0.7.2"
actix-cors = "0.3.0"
anyhow = "1.0.32"

[[bin]]
name = "rust-bert-api"
path = "main.rs"
